Fix square icons in BlackBerry 7.0 PhoneGap.

--- a/styles/mobile/kendo.mobile.blackberry.less
+++ b/styles/mobile/kendo.mobile.blackberry.less
@@ -487,16 +487,16 @@
     background-color: #eee;
 }
 
-.km-blackberry7.km-m0.km-web .km-button .km-icon,
-.km-blackberry7.km-m0.km-web .km-state-active .km-icon,
-.km-blackberry7.km-m0.km-web .km-tabstrip .km-button .km-icon
+.km-blackberry7.km-m0 .km-button .km-icon,
+.km-blackberry7.km-m0 .km-state-active .km-icon,
+.km-blackberry7.km-m0 .km-tabstrip .km-button .km-icon
 {
     background-image: none;
 }
 
-.km-blackberry7.km-m0.km-web .km-listview-link:active .km-icon,
-.km-blackberry7.km-m0.km-web .km-state-active .km-icon,
-.km-blackberry7.km-m0.km-web .km-tabstrip .km-button .km-icon
+.km-blackberry7.km-m0 .km-listview-link:active .km-icon,
+.km-blackberry7.km-m0 .km-state-active .km-icon,
+.km-blackberry7.km-m0 .km-tabstrip .km-button .km-icon
 {
     background-color: transparent;
 }
@@ -575,10 +575,10 @@
     background-color: #4acaff;
 }
 
-.km-blackberry7.km-m0.km-web .km-loading,
-.km-blackberry7.km-m0.km-web .km-load-more .km-icon,
-.km-blackberry7.km-m0.km-web .km-scroller-pull .km-icon,
-.km-blackberry7.km-m0.km-web .km-scroller-refresh .km-icon
+.km-blackberry7.km-m0 .km-loading,
+.km-blackberry7.km-m0 .km-load-more .km-icon,
+.km-blackberry7.km-m0 .km-scroller-pull .km-icon,
+.km-blackberry7.km-m0 .km-scroller-refresh .km-icon
 {
     background-color: transparent;
     .animation(none);
